# video_server

project/: epoll_func.h  function.h  local_socket.h  main.cpp  video_server.sln  video_server.vcxproj
yibo_server/: CMakeLists.txt  example.txt  main.cpp  run
yibo_server/bussiness/: bussiness.cpp  bussiness.h
yibo_server/data_base/: data_base_helper.h
yibo_server/http_parser/: Http_parser.cpp  Http_parser.h  url_parser.cpp  url_parser.h
yibo_server/include/: Logger.cpp  Logger.h  check_error.cpp  check_error.h  epoll_func.h  function.h  function_helper.h  local_socket.h  thread.h
yibo_server/server/: server.cpp  server.h
yibo_server/socket/: socket.h
yibo_server/thread_pool/: thread_pool.cpp  thread_pool.h
